# SparseModelingOfIntrinsicCorrespondences

./: .gitignore  CMakeLists.shared  CMakeLists.txt  README.md  main.cpp
cmake/: FindANTTWEAKBAR.cmake  FindGLFW.cmake  FindLIBIGL.cmake  FindLIM.cmake  FindTETGEN.cmake  FindTINYXML2.cmake  FindTRIANGLE.cmake
forward_backward/include/: forward_backward_solver.hpp
forward_backward/src/: CMakeLists.txt  forward_backward_solver.cpp
linear_assignement/include/: linear_assignement_solver.hpp
linear_assignement/src/: CMakeLists.txt  linear_assignement_solver.cpp
model_to_real/include/: model_to_real.hpp
models/: 0001.affine.1.off  0001.affine.2.off  0001.affine.4.off  0001.affine.5.off  0001.holes.1.off  0001.holes.2.off  0001.holes.3.off  0001.holes.4.off  0001.holes.5.off  0001.isometry.1.off  0001.isometry.2.off  0001.isometry.3.off  0001.isometry.4.off  0001.isometry.5.off  0001.noise.1.off  0001.noise.2.off  0001.noise.3.off  0001.noise.4.off  0001.noise.5.off  0001.null.0.off  0001.partial.1.off  0001.partial.2.off  0001.partial.3.off  0001.partial.4.off  0001.partial.5.off  0001.rasterize.2.off  0001.rasterize.3.off  0001.rasterize.4.off  0001.rasterize.5.off  0001.sampling.1.off  0001.sampling.2.off  0001.sampling.3.off  0001.sampling.4.off  0001.sampling.5.off  0001.scaling.1.off  0001.scaling.2.off  0001.scaling.3.off  0001.scaling.4.off  0001.scaling.5.off  0001.shotnoise.1.off  (+10 more)
octave/: correspond.m  eigenDecomposition.m  f.m  g.m  genA.m  genB.m  generateP2.m  hungarian.m  indic.m  iterate.m  laplacian.m  main.m  matrixConstructor.m  read_off.m  solve.m
(+129 files in other folders)
